--- a/index.html
+++ b/index.html
@@ -16,20 +16,12 @@
     <h2>Cocktails</h2>
     <input type="text" class="search-input" name="drink" placeholder="Search a cocktail">
   </form>
-  <section class="section Cocktails">
-    <article class="loading hide-loading">
-      <img src="loading.gif" alt="loading">
+  <section class="section cocktails">
+    <article class="loading">
+      <img src="./loading.gif" alt="loading">
     </article>
     <h2 class="title"></h2>
     <div class="section-center">
-      <!-- single cocktail -->
-      <a href="drink.html">
-        <article class="cocktail" data-id="1">
-          <img src="./cocktail.jpg" alt="cocktail image">
-          <h3>martini</h3>
-        </article>
-      </a>
-      <!-- end of single cocktail -->
     </div>
   </section>
   <script type="module" src="./app.js"></script>
